# pytest-partial-compare

./: README.md  pyproject.toml
partial_compare/: __init__.py
partial_dict_compare/: __init__.py
